<resources>
    <string name="app_name">WeedingDay</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Login_in">Login</string>
    <string name="Register">Register</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_guest_list">Guests</string>
    <string name="title_guest_detail">Guest Detail</string>
    <string name="Title">Title</string>
    <string name="About">About</string>
    <string name="AllGuests">All Guests</string>
    <string name="GroomGuests">Groom Guests:</string>
    <string name="BrideGuests">Bride Guests:</string>
    <string name="Sleeping">Sleeping Guests Number:</string>
    <string name="GuestDetailData">Info About Weeding Guest</string>
    <string name="Name">Name:</string>
    <string name="Surname">Surname:</string>
    <string name="PhoneNumber">Phone Number:</string>
    <string name="GuestFriend">Accompanying Person</string>
    <string name="Groom">Groom Guest</string>
    <string name="Bride">Bride Guest</string>
    <string name="GuestFriendData">Info About Accompanying Person</string>
    <string name="AddGuest">Add Guest</string>
    <string name="SleepingHeader">Sleeping</string>
    <string name="Days">days</string>
    <string name="Remained">Remained</string>
    <string name="Guests">Guests</string>
    <string name="Costs">Costs</string>
    <string name="Task">Tasks</string>
    <string name="Service">Service Providers</string>
    <string name="Counting">Finall Counting</string>
    <string name="LoginHint">Enter your login</string>
    <string name="PasswordHint">Enter your Password</string>
    <string name="NameHint">Enter your Name</string>
    <string name="SurnameHint">Enter your Surname</string>
    <string name="EmailHint">Enter your Email</string>
    <string name="Email">Email</string>
    <string name="TaskSucces">Correctly added new task to list.</string>
    <string name="TaskDeletedSucces">Successfully removed task from the list.</string>
    <string name="TaskDeletedFail">Can not delete tasks from the list.</string>
    <string name="GuestList">Guests List</string>
    <string name="AddNew">Add new guest...</string>
    <string name="Summary">Summary</string>
    <string name="LogOut">Logout</string>
    <string name="AddTask">Add new task</string>
    <string name="AddCost">Add new cost</string>
    <string name="AddService">Add new service</string>
    <string name="AddGuestSucces">Successfully added new guest to list</string>
    <string name="AddGuestFail">Can not add new guest to list.</string>
    <string name="DeleteGuestSucces">Successfully removed from the guest list.</string>
    <string name="Add">Add</string>
    <string name="Cost">Cost</string>
    <string name="Category">Category</string>
    <string name="CostSummary">Cost summary:</string>
    <string name="Different">Different:</string>
    <string name="Car">Car:</string>
    <string name="Attractions">Attractions:</string>
    <string name="Catering">Catering:</string>
    <string name="Clothes">Clothes:</string>
    <string name="CostsList">Costs List</string>
    <string name="CostsSummary">Costs Summary</string>
    <string name="ServiceCosts">Service costs summary</string>
    <string name="ProviderList">Provider List</string>
</resources>
