<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:columnCount="2"
    android:rowCount="8"
    tools:context="com.example.dell.weedingday.Activities.LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:orientation="vertical"
        android:layout_width="match_parent">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/weeding_day"/>

        <ImageView

            android:layout_height="75dp"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:layout_gravity="center|top"
            android:src="@drawable/ic_wedding"/>

    </LinearLayout>


    <LinearLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Login" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/LoginRegister"
            android:hint="@string/LoginHint" />

    </LinearLayout>

    <LinearLayout
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Password" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/PasswordRegister"
            android:hint="@string/PasswordHint" />

    </LinearLayout>

    <LinearLayout
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Name" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/NameRegister"
            android:hint="@string/NameHint" />

    </LinearLayout>

    <LinearLayout
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Surname" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/SurnameRegister"
            android:hint="@string/SurnameHint" />

    </LinearLayout>

    <LinearLayout
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Email" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/EmailRegister"
            android:hint="@string/EmailHint" />

    </LinearLayout>


    <Button
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/RegisterBtn"
        android:onClick="RegisterNewUser"
        android:text="@string/Register"
        android:textSize="@dimen/text_size"
        android:textColor="@animator/button_state"
        android:layout_width="match_parent"/>


</GridLayout>
