<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:columnCount="2"
    android:rowCount="5"
    tools:context="com.example.dell.weedingday.Activities.LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:orientation="vertical"
        android:layout_width="match_parent">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/weeding_day"/>

        <ImageView

            android:layout_height="75dp"
            android:layout_width="100dp"
            android:textAlignment="center"
            android:layout_gravity="center|top"
            android:src="@drawable/ic_wedding"/>

    </LinearLayout>


    <LinearLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="bottom">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Login" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/LoginLogin"
            android:hint="@string/LoginHint" />

    </LinearLayout>

    <LinearLayout
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_rowWeight="1"
        android:layout_gravity="top">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/Password" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/PasswordLogin"
            android:hint="@string/PasswordHint" />

    </LinearLayout>

    <Button android:layout_row="3"
        android:layout_column="1"
        android:text="@string/Register"
        android:onClick="RegisterActivityStart"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size"
        android:textColor="@animator/button_state"
        android:background="@android:color/transparent"/>

    <Button
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/Login_in"
        android:onClick="LogIn"
        android:textSize="@dimen/text_size"
        android:textColor="@animator/button_state"
        android:layout_width="match_parent"/>


</GridLayout>
