<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:rowCount="6"
    android:orientation="horizontal"
    tools:context="com.example.dell.weedingday.Activities.AddNewServiceActivity">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:textSize="@dimen/text_header"
        android:layout_margin="@dimen/controls_margin"
        android:layout_gravity="fill_horizontal"
        android:text="@string/Category">

    </TextView >

    <Spinner
        android:layout_row="0"
        android:layout_column="1"
        android:layout_margin="@dimen/controls_margin"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/SpinnerService">

    </Spinner>

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/text_header"
        android:layout_margin="@dimen/controls_margin"
        android:text="@string/Title"/>

    <EditText
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/text_header"
        android:id="@+id/TitleServiceAdd"
        android:layout_margin="@dimen/controls_margin"/>

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/text_header"
        android:layout_margin="@dimen/controls_margin"
        android:lines="4"
        android:text="@string/About"/>

    <EditText
        android:layout_row="2"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/AboutServiceAdd"
        android:textSize="@dimen/text_header"
        android:layout_margin="@dimen/controls_margin">
    </EditText >

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/text_header"
        android:layout_margin="@dimen/controls_margin"
        android:text="@string/Cost"/>

    <EditText
        android:layout_row="3"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/text_header"
        android:lines="1"
        android:id="@+id/CostServiceAdd"
        android:layout_margin="@dimen/controls_margin"/>

        <Button
            android:text="@string/Add"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="bottom|right"
            android:textSize="@dimen/text_size"
            android:textColor="@animator/button_state"
            android:onClick="AddNewService"/>

</GridLayout>
</ScrollView>
