<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/guest_detail_container"
    android:columnCount="2"
    android:rowCount="5"
    android:background="@drawable/background">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
        android:layout_row="0"
    android:textSize="@dimen/text_header"
        android:textStyle="bold"
    android:text="@string/AllGuests"
        android:layout_columnWeight="2"
    android:layout_margin="@dimen/text_margin"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="223"
        android:id="@+id/AllGuestsSummary"
    android:textAlignment="center"
        android:layout_row="0"
        android:layout_column="1"
    android:textStyle="bold"
        android:layout_columnWeight="2"
    android:textSize="@dimen/text_header"
    android:layout_margin="@dimen/text_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:textSize="@dimen/text_size"
        android:text="@string/GroomGuests"
        android:layout_columnWeight="2"
        android:layout_margin="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="112"
        android:id="@+id/GroomGuestNumber"
        android:textAlignment="center"
        android:layout_row="1"
        android:layout_column="1"
        android:textStyle="bold"
        android:layout_columnWeight="2"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/text_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="@dimen/text_size"
        android:text="@string/BrideGuests"
        android:layout_columnWeight="2"
        android:layout_margin="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="112"
        android:id="@+id/BrideGuestNumber"
        android:textAlignment="center"
        android:layout_row="2"
        android:layout_column="1"
        android:textStyle="bold"
        android:layout_columnWeight="2"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/text_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:textSize="@dimen/text_size"
        android:text="@string/Sleeping"
        android:layout_columnWeight="2"
        android:layout_margin="@dimen/text_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="38"
        android:id="@+id/SleepingNumber"
        android:textAlignment="center"
        android:layout_row="3"
        android:layout_column="1"
        android:textStyle="bold"
        android:layout_columnWeight="2"
        android:textSize="@dimen/text_size"
        android:layout_margin="@dimen/text_margin"/>

</GridLayout>