

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="8"
    android:rowCount="9"
    android:isScrollContainer="true"
    tools:context="com.example.dell.weedingday.Activities.GuestDetailFragment"
    android:background="@drawable/background">

    <!--Nagłowek 1-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/controls_margin"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="8"
            android:textSize="@dimen/text_header"
            android:text="@string/GuestDetailData"/>

    <!--Dane goscia weselnego-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="8">

        <TextView
            android:text="@string/Name"
            android:layout_margin="@dimen/controls_margin"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/text_size"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="wrap_content" />
        <EditText
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/controls_margin"
            android:id="@+id/GuestNameAdd"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnSpan="2"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView
            android:text="@string/Surname"
            android:layout_row="1"
            android:layout_column="5"
            android:layout_columnSpan="1"
            android:layout_weight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/controls_margin"
            android:textSize="@dimen/text_size"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <EditText
            android:layout_margin="@dimen/controls_margin"
            android:id="@+id/GuestSurnameAdd"
            android:layout_row="1"
            android:layout_weight="2"
            android:layout_gravity="fill_horizontal"
            android:layout_column="7"
            android:layout_columnSpan="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="8">

        <TextView
            android:text="@string/PhoneNumber"
            android:layout_margin="@dimen/controls_margin"
            android:textSize="@dimen/text_size"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_columnSpan="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <EditText
            android:layout_margin="@dimen/controls_margin"
            android:id="@+id/GuestPhoneAdd"
            android:layout_row="2"
            android:layout_weight="4"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="5"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <Space
        android:layout_column="0"
        android:layout_columnSpan="8"
        android:layout_row="7"
        android:layout_gravity="fill"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


        <CheckBox
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/controls_margin"
            android:textColor="@color/darkGray"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:id="@+id/IsSleeping"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/SleepingHeader"/>

        <CheckBox
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/controls_margin"
            android:textColor="@color/darkGray"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:id="@+id/IsWithFriend"
            android:onClick="ShowFriendDetails"
            android:layout_column="3"
            android:layout_columnSpan="2"
            android:text="@string/GuestFriend" />

    <RadioGroup
        android:layout_column="5"
        android:layout_columnSpan="2"
        android:layout_row="3"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textColor="@color/darkGray"
            android:id="@+id/GroomGuestRadioButton"
            android:layout_margin="@dimen/controls_margin"
            android:text="@string/Groom"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BrideGuestRadioButton"
            android:layout_margin="@dimen/controls_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/darkGray"
            android:text="@string/Bride"/>
    </RadioGroup>



        <TextView
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/controls_margin"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="8"
            android:id="@+id/GuestFriendTextView"
            android:textSize="@dimen/text_header"
            android:visibility="invisible"
            android:text="@string/GuestFriendData"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="8"
        android:id="@+id/GuestFriendLL"
        android:visibility="invisible">

        <TextView
        android:text="@string/Name"
        android:layout_margin="@dimen/controls_margin"
        android:textSize="@dimen/text_size"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="wrap_content" />

        <EditText
        android:layout_margin="@dimen/controls_margin"
        android:id="@+id/GuestFriendNameAdd"
        android:layout_row="6"
        android:layout_gravity="fill_horizontal"
        android:layout_column="2"
        android:layout_columnSpan="3"
            android:layout_weight="2"
        android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView
        android:layout_width="wrap_content"
        android:text="@string/Surname"
        android:layout_margin="@dimen/controls_margin"
        android:textSize="@dimen/text_size"
        android:layout_row="6"
        android:layout_column="4"
            android:layout_weight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content" />
        <EditText
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/controls_margin"
        android:id="@+id/GuestFriendSurnameAdd"
        android:layout_row="6"
            android:layout_weight="2"
        android:layout_gravity="fill_horizontal"
        android:layout_column="6"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <Space
        android:layout_column="0"
        android:layout_columnSpan="8"
        android:layout_row="7"
        android:layout_gravity="fill"/>

    <Button
        android:text="Dodaj gościa"
        android:layout_row="8"
        android:layout_column="6"
        android:textSize="@dimen/text_size"
        android:textColor="@animator/button_state"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:onClick="AddNewGuest"/>




</GridLayout>